Show the other navbar items on mobile too.
Minus the version toggler for now.

--- a/site/layouts/partials/docs-navbar.html
+++ b/site/layouts/partials/docs-navbar.html
@@ -26,8 +26,8 @@
     </ul>
   </div>
 
-  <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
-    <li class="nav-item dropdown">
+  <ul class="navbar-nav ml-md-auto mt-3">
+    <li class="nav-item dropdown d-none d-md-block">
       <a class="nav-item nav-link dropdown-toggle mr-md-2" href="#" id="bd-versions" data-toggle="dropdown" aria-expanded="false">
         v{{ .Site.Params.docs_version }}
       </a>
